--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "ps-list": "^8.1.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "systeminformation": "^5.25.11"
   }
 }
