--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     startCommand: cd backend && node server.js
     envVars:
       - key: FRONTEND_URL
-        value: https://your-frontend-url-on-vercel.vercel.app
+        value: https://rtp-m-liart.vercel.app/ 
     buildFilter:
       paths:
         - backend/**
